--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 
   <script type="module" src="index.js"></script>
+  <script type="module" src="modules/navigation.js"></script>
 </body>
 
 </html>
